# secretscanner

./: .gitignore  Changelog.md  ReadMe.md  pyproject.toml
.github/workflows/: python-test.yml
src/secretscanner/: __init__.py  __main__.py  entropy.py  find.py  gitignore.py  highlighter.py  progress_column_file.py  report.py  scanner.py  secret_info.py  token_info.py  types.py
tests/: test_private_key.py  test_rfind.py  test_scanner.py  test_secretscanner.py  test_version.py
tests/dir/adafruit/: adafruit.txt  notadafruit.txt
tests/dir/digitalocean/: digitalocean.txt  notdigitalocean.txt
tests/dir/discord/: discord.txt  notdiscord.txt
tests/dir/github/: github.txt  notgithub.txt
tests/dir/linode/: linode.txt
tests/dir/password/: password.txt
tests/dir/postgresql/: notpostgresql.txt  postgresql.txt
tests/dir/private_key/: notprivate_key.pem  private_key.pem
tests/dir/pypi/: notpypi.txt  pypi.txt
