[tool.poetry]
name = "secretscanner"
version = "0.1.0"
description = "Scan for secrets within files."
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "Apache-2.0"
readme = "ReadMe.md"
repository = "https://github.com/sffjunkie/secretscanner"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
